crates/simplexpr/src/parser/snapshots/simplexpr__parser__lexer__test__simplexpr_lexer_str_interpolate-2.snap
---
source: crates/simplexpr/src/parser/lexer.rs
expression: "Lexer::new(0, 0, r#\" \"foo {(2 * 2) + \"{5 + 5}\"} bar\" \"#).collect_vec()"

---
[
    Ok(
        (
            1,
            StringLit(
                [
                    (
                        1,
                        Literal(
                            "foo ",
                        ),
                        7,
                    ),
                    (
                        7,
                        Interp(
                            [
                                (
                                    7,
                                    LPren,
                                    8,
                                ),
                                (
                                    8,
                                    NumLit(
                                        "2",
                                    ),
                                    9,
                                ),
                                (
                                    10,
                                    Times,
                                    11,
                                ),
                                (
                                    12,
                                    NumLit(
                                        "2",
                                    ),
                                    13,
                                ),
                                (
                                    13,
                                    RPren,
                                    14,
                                ),
                                (
                                    15,
                                    Plus,
                                    16,
                                ),
                                (
                                    17,
                                    StringLit(
                                        [
                                            (
                                                17,
                                                Literal(
                                                    "",
                                                ),
                                                19,
                                            ),
                                            (
                                                19,
                                                Interp(
                                                    [
                                                        (
                                                            19,
                                                            NumLit(
                                                                "5",
                                                            ),
                                                            20,
                                                        ),
                                                        (
                                                            21,
                                                            Plus,
                                                            22,
                                                        ),
                                                        (
                                                            23,
                                                            NumLit(
                                                                "5",
                                                            ),
                                                            24,
                                                        ),
                                                    ],
                                                ),
                                                24,
                                            ),
                                            (
                                                24,
                                                Literal(
                                                    "",
                                                ),
                                                26,
                                            ),
                                        ],
                                    ),
                                    26,
                                ),
                            ],
                        ),
                        26,
                    ),
                    (
                        26,
                        Literal(
                            " bar",
                        ),
                        32,
                    ),
                ],
            ),
            32,
        ),
    ),
]
