crates/simplexpr/src/parser/snapshots/simplexpr__parser__lexer__test__simplexpr_lexer_str_interpolate-3.snap
---
source: crates/simplexpr/src/parser/lexer.rs
expression: "Lexer::new(0, 0, r#\" \"a\\\"b\\{}\" \"#).collect_vec()"

---
[
    Ok(
        (
            1,
            StringLit(
                [
                    (
                        1,
                        Literal(
                            "a\"b{}",
                        ),
                        10,
                    ),
                ],
            ),
            10,
        ),
    ),
]
