crates/simplexpr/src/parser/snapshots/simplexpr__parser__lexer__test__simplexpr_lexer_str_interpolate.snap
---
source: crates/simplexpr/src/parser/lexer.rs
expression: "Lexer::new(0, 0, r#\" \"foo {2 * 2} bar\" \"#).collect_vec()"

---
[
    Ok(
        (
            1,
            StringLit(
                [
                    (
                        1,
                        Literal(
                            "foo ",
                        ),
                        7,
                    ),
                    (
                        7,
                        Interp(
                            [
                                (
                                    7,
                                    NumLit(
                                        "2",
                                    ),
                                    8,
                                ),
                                (
                                    9,
                                    Times,
                                    10,
                                ),
                                (
                                    11,
                                    NumLit(
                                        "2",
                                    ),
                                    12,
                                ),
                            ],
                        ),
                        12,
                    ),
                    (
                        12,
                        Literal(
                            " bar",
                        ),
                        18,
                    ),
                ],
            ),
            18,
        ),
    ),
]
