crates/simplexpr/src/parser/snapshots/simplexpr__parser__lexer__test__weird_char_boundaries.snap
---
source: crates/simplexpr/src/parser/lexer.rs
expression: "v!(r#\"\"   \" + music\"#)"

---
(0, StringLit([(0, Literal("\u{f001}   "), 8)]), 8)
(9, Plus, 10)
(11, Ident("music"), 16)
